src/components/Topbar/Topbar.m.css
@import "../commons/_medias.css";
@import "../commons/_colors.css";
@import "../commons/_shadows.css";
@import "../commons/_paddings.css";
@import "../commons/_text.css";

.topbar {
  background: var(--color-white);
  box-shadow: var(--shadow);
}

.content {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  box-sizing: border-box;
  padding-top: var(--padding);
  padding-left: var(--padding);
  padding-right: var(--padding);
}

.logo {
  order: 0;
}

.title {
  order: 1;
  flex-grow: 1;
  padding-left: 15%;
  font-size: var(--text-lg);
  font-weight: 600;
  text-transform: uppercase;
  color: var(--color-secondary);
}

.social {
  order: 2;
}

.auth {
  order: 3;
}

.actions {
  order: 4;
  width: 100%;
  text-align: right;
  padding-top: 12px;
}

.logoImageLarge {
  display: none;
}

.socialLink {
  display: flex;
  line-height: 1;
  align-items: center;
  text-decoration: none;
  color: var(--color-black);
  font-size: var(--text-md);
  font-weight: 500;
}

.socialLinkIcon {
  margin-right: 6px;
}

@media (--media-md) {
  .content {
    padding-bottom: var(--padding);
  }

  .actions {
    order: 2;
    width: auto;
    padding: 0;
  }
}

@media (--media-lg) {
  .logoImageLarge { display: inline-block; }
  .logoImageSmall { display: none; }
}

